Thermospas iframe spacing issue fix

--- a/style.css
+++ b/style.css
@@ -149,12 +149,16 @@ article .dyo-promo.only-phone {
 	{
 		padding-left: 15px !important;
 		padding-right: 15px !important;
+		width: 100%;
+		height: 800px;
 	}
 	
 	article.iframearticle iframe
 	{
 		overflow-x: scroll !important; 
 		overflow-y: scroll !important;
+		width: 100%;
+		height: 800px;
 	}
 }
 
